# sCrapper

./: CMakeLists.txt  README.md  configuration.sconf
include/: analyser.h  comparator.h  configuration.h  list.h  parser.h  scanner.h  scheduler.h  scrapper.h  shell.h  utils.h
src/analyser/: analyser.c
src/comparator/: comparaor.c
src/configuration/: configuration.c  parser.c
src/core/: main.c
src/list/: list.c
src/scanner/: scanner.c
src/scheduler/: scheduler.c
src/scrapper/: scrapper.c
src/shell/: shell.c
src/utils/: utils.c
